fdo#62719: Set more relaxed clipping region.

It actually is so that the line is in the output PostScript; and it is even
visible sometimes when you zoom the file (like, when you are zooming
continuously, the line is appearing and disappearing).

I guess it is a corner case of the clipping, highly dependent on the exact
settings, so let's be more relaxed and clip a bit less (as we already do for
right/bottom).

Hopefully some other functionality does not depend on this exact clip
setting ;-)

Change-Id: I7080ad3ff730408296f9e9dec7a0b74ac4afca7d